# django-drf-keycloak-auth

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build_long_description.py  interactive_deploy.expect  interactive_deploy.sh  interactive_deploy_test.expect  interactive_deploy_test.sh  main.py  manage.py  pyproject.toml  setup.py
django_drf_keycloak_auth/: asgi.py  authentication.py  keycloak_utils.py  schema.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
django_drf_keycloak_auth/models/: user.py
django_drf_keycloak_auth/vo/: UserInfoVO.py
