[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-drf-keycloak-auth"
description = "Django app for Keycloak OAuth2 authentication with DRF."
readme = { file = "LONG_DESCRIPTION.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "xiaobitipao", email = "xiaobitipao@gmail.com" }]
keywords = ["keycloak", "django", "djangorestframework", "oauth2"]
classifiers = [
    "Framework :: Django",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    'python-dotenv>=1.1.1',
    "Django>=5.2.7",
    "djangorestframework>=3.16.1",
    "python-keycloak>=5.8.1",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
]
urls = { "Homepage" = "https://github.com/xiaobitipao/django-drf-keycloak-auth" }
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["django_drf_keycloak_auth*"]

[tool.setuptools.dynamic]
version = { attr = "django_drf_keycloak_auth.version.__version__" }

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
